[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/giantrobot.png" type="Texture" id=1]
[ext_resource path="res://GiantRobot.gd" type="Script" id=2]
[ext_resource path="res://assets/sound/IceBreak.wav" type="AudioStream" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Blink"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0, 1, 0, 1 ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 24.0

[node name="GiantRobot" type="Sprite"]
z_index = -1
texture = ExtResource( 1 )
hframes = 2
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Blink = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
visible = false
monitorable = false
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -2.6352, -19.764 )
shape = SubResource( 2 )

[node name="IceBreak" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
